[gd_scene format=3 uid="uid://blfkit4v8y4xv"]

[ext_resource type="Script" uid="uid://bmq84ts2o3c7i" path="res://scripts/gui/debug_menu.gd" id="1_acute"]

[node name="DebugMenu" type="MarginContainer" unique_id=1290828919]
visible = false
offset_right = 152.0
offset_bottom = 85.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("1_acute")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1960230732]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer" unique_id=1821472789]
layout_mode = 2

[node name="MouseCoordsLabel" type="Label" parent="VBoxContainer/HBoxContainer" unique_id=236536272]
layout_mode = 2
text = "Mouse Coords:"

[node name="MouseCoordsValueLabel" type="Label" parent="VBoxContainer/HBoxContainer" unique_id=491465414]
layout_mode = 2
text = "(0,0)"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer" unique_id=1256446711]
layout_mode = 2

[node name="SpawnFishButton" type="Button" parent="VBoxContainer/HBoxContainer2" unique_id=528866092]
layout_mode = 2
text = "Spawn Fish"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer" unique_id=20620650]
layout_mode = 2

[node name="DayTimeLabel" type="Label" parent="VBoxContainer/HBoxContainer3" unique_id=939334634]
layout_mode = 2
text = "Day time left:"

[node name="DayTimeValueLabel" type="Label" parent="VBoxContainer/HBoxContainer3" unique_id=318735568]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer" unique_id=1040224659]
layout_mode = 2

[node name="CorruptionLabel" type="Label" parent="VBoxContainer/HBoxContainer4" unique_id=1366850324]
layout_mode = 2
text = "Corruption: "

[node name="CorruptionValueLabel" type="Label" parent="VBoxContainer/HBoxContainer4" unique_id=365349094]
layout_mode = 2
text = "0"

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer" unique_id=89327793]
layout_mode = 2

[node name="CorruptionUpButton" type="Button" parent="VBoxContainer/HBoxContainer5" unique_id=1893024943]
layout_mode = 2
text = "Corruption ++"

[node name="CorruptionDownButton" type="Button" parent="VBoxContainer/HBoxContainer5" unique_id=1836522248]
layout_mode = 2
text = "Corruption --"

[node name="HBoxContainer6" type="HBoxContainer" parent="VBoxContainer" unique_id=1750174940]
layout_mode = 2

[node name="CurrentDayLabel" type="Label" parent="VBoxContainer/HBoxContainer6" unique_id=1085610943]
layout_mode = 2
text = "Current Day: "

[node name="CurrentDayValueLabel" type="Label" parent="VBoxContainer/HBoxContainer6" unique_id=1411615990]
layout_mode = 2
text = "0"

[node name="HBoxContainer7" type="HBoxContainer" parent="VBoxContainer" unique_id=731044664]
layout_mode = 2

[node name="CurrentDayDecButton" type="Button" parent="VBoxContainer/HBoxContainer7" unique_id=818952662]
layout_mode = 2
text = "Day --"

[node name="CurrentDayIncButton" type="Button" parent="VBoxContainer/HBoxContainer7" unique_id=1412715496]
layout_mode = 2
text = "Day ++"

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/SpawnFishButton" to="." method="_on_spawn_fish_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer5/CorruptionUpButton" to="." method="_on_corruption_up_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer5/CorruptionDownButton" to="." method="_on_corruption_down_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer7/CurrentDayDecButton" to="." method="_on_current_day_dec_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer7/CurrentDayIncButton" to="." method="_on_current_day_inc_button_pressed"]
